2005-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/participating/menu-entries.py: Add
	documentation-adding.

2005-02-23  Graham Percival  <gperlist@shaw.ca>

	* site/devel/participating/documentation-adding.html: new page,

	* site/devel/participating/index.html: removed info about adding
	to docs; made link to documentation-adding.html.

	* site/devel/participating/call-for-help.html: added link to
	documentation-adding.html

2005-02-17  Graham Percival  <gperlist@shaw.ca>

	* site/download/index.html: changed MacOSX version from 2.5.9
	to 2.5.0.  IMO the experimental CVS shouldn't count; 2.5.0 is
	what we get with "fink install lilypond-unstable".

2005-02-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* More html cleaups, validation checks.

	* site/about/faq.html (href): Fix link to RUMOR.

	* site/index.html: Add Validation marker.  Move to template.ihtml?

	* scripts/format-page.py (grab_gettext): Support anchors.

	* scripts/format-page.py (MENU_ITEM_ACTIVE):
	* site/template.ihtml: 
	* site/index.html: w3c fixes.

2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: thank bandwidth sponsor.

2005-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: 
	* site/download/macos.html:
	* site/download/using.html: (These could do with a checkup by the
	package maintainers),
	* site/download/getting-started.html: 
	* site/about/index.html:
	* site/switch/tour.html: HTML cleanup; mainly add Revision marker,
	add missing closing tags, missing attribute quoting, run
	indent-region.

	* TRANSLATION: New file.

2005-01-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/translate.py: Bugfix. 

	* GNUmakefile (%.png): Crop generated images.  
	* (po/$(LANG).po): 
	* (po/newweb.pot): Update.

2005-01-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/switch/howto.html: Cleanups and langify urls.

	* site/graphics/annotate-example-single-part.svg:
	* site/graphics/annotate-example-score.svg: 