@@ -1,5 +1,9 @@
 2005-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* GNUmakefile (check-translation): New target.
+
+	* scripts/check-translation.py: New file.
+
 	* site/devel/participating/menu-entries.py: Add
 	documentation-adding.
 
